school-app-181210/force-app/main/default/objects/Class__c/Class__c.object-meta.xml
<CustomObject>
    <label>Class</label>
    <nameField>
        <displayFormat>Class Id #{000}</displayFormat>
        <label>Class Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>