school-app-181210/force-app/main/default/objects/Class__c/fields/ClassCode__c.field-meta.xml
<CustomField>
    <fullName>ClassCode__c</fullName>
    <formula>TEXT(Topic__c)  &amp; &quot;-&quot; &amp;  TEXT(Semester__c) &amp;  Year__c</formula>
    <label>Class Code</label>
    <type>Text</type>
</CustomField>