school-app-181210/force-app/main/default/objects/Class__c/fields/ClassSize__c.field-meta.xml
<CustomField>
    <fullName>ClassSize__c</fullName>
    <description>Calculates the number of students currently enrolled in this class.</description>
    <label>Class Size</label>
    <summaryForeignKey>ClassEnrollment__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>