school-app-181210/force-app/main/default/objects/Class__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subject__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Algebra</fullName>
            </value>
            <value>
                <fullName>Geometry</fullName>
            </value>
            <value>
                <fullName>Trigonometry</fullName>
            </value>
            <value>
                <fullName>Pre-Calculus</fullName>
            </value>
            <value>
                <fullName>Statistics</fullName>
            </value>
            <value>
                <fullName>Calculus AB</fullName>
            </value>
            <value>
                <fullName>Calculus BC</fullName>
            </value>
            <value>
                <fullName>English I</fullName>
            </value>
            <value>
                <fullName>English II</fullName>
            </value>
            <value>
                <fullName>English III</fullName>
            </value>
            <value>
                <fullName>English IV</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Physics</fullName>
            </value>
            <value>
                <fullName>Anatomy &amp; Physiology</fullName>
            </value>
            <value>
                <fullName>Geology</fullName>
            </value>
            <value>
                <fullName>World History</fullName>
            </value>
            <value>
                <fullName>US History</fullName>
            </value>
            <value>
                <fullName>European History</fullName>
            </value>
            <value>
                <fullName>Civics</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
            <value>
                <fullName>Ceramics</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>Jewelry</fullName>
            </value>
            <value>
                <fullName>Drawing</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Freshmen PE</fullName>
            </value>
            <value>
                <fullName>Sophomore PE</fullName>
            </value>
            <value>
                <fullName>Weight Training</fullName>
            </value>
            <value>
                <fullName>Dance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>