school-app-181210/force-app/main/default/objects/Class__c/listViews/Approved_Classes.listView-meta.xml
<ListView>
    <fullName>Approved_Classes</fullName>
    <columns>NAME</columns>
    <columns>ClassCode__c</columns>
    <columns>ClassSize__c</columns>
    <columns>Subject__c</columns>
    <columns>Topic__c</columns>
    <columns>Semester__c</columns>
    <columns>Year__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Classes</label>
</ListView>