school-app-181210/force-app/main/default/objects/Class__c/listViews/MathClasses.listView-meta.xml
<ListView>
    <fullName>MathClasses</fullName>
    <columns>NAME</columns>
    <columns>ClassCode__c</columns>
    <columns>Topic__c</columns>
    <columns>ClassSize__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subject__c</field>
        <operation>equals</operation>
        <value>Math</value>
    </filters>
    <label>Math Classes</label>
</ListView>