school-app-181210/force-app/main/default/objects/Class__c/listViews/Upcoming_Classes.listView-meta.xml
<ListView>
    <fullName>Upcoming_Classes</fullName>
    <columns>NAME</columns>
    <columns>ClassCode__c</columns>
    <columns>ClassSize__c</columns>
    <columns>Subject__c</columns>
    <columns>Topic__c</columns>
    <columns>Year__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Semester__c</field>
        <operation>equals</operation>
        <value>Spring</value>
    </filters>
    <label>Upcoming Classes</label>
</ListView>